# GromitBot

./: .gitignore  CMakeLists.txt  GromitBot.slnx  README.md  build_and_run.bat  config.json  gromitbot.py  install.bat  start.bat
addon/: GromitBot.lua  GromitBot.toc  chat_listener.lua  command_poller.lua  config.lua  fishing.lua  herbalism.lua  human_behavior.lua  inventory.lua  leveling.lua  profile_registry.lua  utils.lua
addon/GromitBot/: GromitBot.lua  GromitBot.toc
addon/navmesh/: arathi.nav
addon/profiles/: elwynn.lua  redridge.lua  westfall.lua
agent/: agent.py  fleet.py  requirements.txt
config/: bot_config.json  fleet_config.json
dll/: CMakeLists.txt
dll/include/: offsets.h
dll/src/: dllmain.cpp  hooks.cpp  hooks.h  http_client.cpp  http_client.h  injector.cpp  lua_bridge.cpp  lua_bridge.h  memory.cpp  memory.h
installer/: bootstrap.bat
navmeshes/: default.json
paths/: __init__.py  herbalism.json  leveling.json  vendor.json
profiles/: default.json
server/: main.py  models.py
src/: __init__.py  config.py  discord_bot.py  fishing_bot.py  herbalism_bot.py  human_behavior.py  input.py  inventory_manager.py  leveling_bot.py  logger.py  pathfinding.py  screen.py  state.py
src/GromitBot.Agent/: GromitBot.Agent.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/GromitBot.Agent/Bots/: BotManager.cs  BotSlot.cs  BotSnapshot.cs  SnapshotService.cs
src/GromitBot.Agent/Commands/: CommandEnvelope.cs  CommandRouter.cs  CommandServer.cs
src/GromitBot.Agent/Configuration/: AgentOptions.cs
src/GromitBot.Agent/Infrastructure/: JsonDefaults.cs
src/GromitBot.Agent/Inventory/: InventoryService.cs
src/GromitBot.Agent/Modes/: BotModeContext.cs  FishingMode.cs  HerbalismMode.cs  IBotMode.cs  LevelingMode.cs
src/GromitBot.Agent/Nav/: NavEdge.cs  NavMesh.cs  NavMeshRepository.cs  NavNode.cs  Pathfinder.cs
src/GromitBot.Agent/Profiles/: BotProfile.cs  ProfileRepository.cs
src/GromitBot.Agent/Properties/: launchSettings.json
src/GromitBot.Agent/State/: PersistedBotState.cs  StateStore.cs
src/GromitBot.Agent/Wow/: AddonIpcBridge.cs  CompositeWowBridge.cs  IWowBridge.cs  MemoryInputBridge.cs  WowAction.cs  WowTelemetry.cs
superwow/: README.md
